Grammar.txt
program -> assignment_statement print_statement

assignment_statement -> identifier "=" expression

print_statement -> "print" expression

expression -> identifier
            | number            
            | "(" expression ")"

identifier -> [a-zA-Z_][a-zA-Z0-9_]*
number -> [0-9]+        
